@@ -1,12 +1,25 @@
 package com.imperionite.cp1.services;
 
-import com.imperionite.cp1.entities.User;
-import com.imperionite.cp1.repositories.UserRepository;
+/**
+ * This code checks the user.isAdmin() value.  If it's true, it grants the user the "ROLE_ADMIN" authority.  
+ * If it's false, the user gets no authorities (or you can add other authorities as needed).  
+ * This is the crucial part that connects isAdmin field to Spring Security's authorization mechanism.
+ * 
+ * Spring Security's hasRole() method checks if the user has a specific authority.  By default, it prefixes roles with "ROLE_".  
+ * in CustomUserDetailsService, creating a SimpleGrantedAuthority("ROLE_ADMIN") if user.isAdmin() is true.  This is what makes the connection.  
+ * When Spring Security checks hasRole("ADMIN"), it's effectively checking if the user has the "ROLE_ADMIN" authority.
+ */
 
+import com.imperionite.cp1.repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -15,13 +28,12 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username);
-        if (user == null) {
-            throw new UsernameNotFoundException("User Not Found with username: " + username);
-        }
-        return new org.springframework.security.core.userdetails.User(
-                user.getUsername(),
-                user.getPassword(),
-                Collections.emptyList());
+        return userRepository.findByUsername(username)
+                .map(user -> new org.springframework.security.core.userdetails.User(
+                        user.getUsername(),
+                        user.getPassword(),
+                        user.getIsAdmin() ? List.of(new SimpleGrantedAuthority("ROLE_ADMIN"))
+                                : Collections.emptyList()))
+                .orElseThrow(() -> new UsernameNotFoundException("User Not Found with username: " + username));
     }
 }
